manifests/rollouts-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts-dashboard-route
  namespace: argo-rollouts
spec:
  parentRefs:
  - name: gateway
    namespace: gateway-ns
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argo-rollouts-dashboard
      port: 3100
